--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
 
     implementation 'com.squareup.picasso:picasso:2.8'
+
+
+        implementation "androidx.core:core-splashscreen:1.0.0"
+    
 }
