--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,12 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
 
 
-        implementation "androidx.core:core-splashscreen:1.0.0"
-    
+    implementation "androidx.core:core-splashscreen:1.0.0"
+
+
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    implementation 'com.facebook.stetho:stetho:1.6.0'
+
+
 }
